<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">\@string_app_name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hint_nickname">Nickname</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="host_ip">192.168.0.99</string>
    <string name="menu_share">Share</string>
    <string name="menu_selfie">Selfie</string>

    <string name="turn_flashlight_on">Turn flashlight on</string>
    <string name="turn_flashlight_off">Turn flashlight off</string>
    <string name="wrong_ip">Ip is wrong</string>
    <string name="join_to_another_session">Join to another session?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add">Add</string>
    <string name="menu_confirm">Confirm</string>
    <string name="menu_cancel">Cancel</string>
    <string name="hint_password">Password</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="wrong_password2">aaaa</string>
    <string name="wrong_password3">aaaa</string>
    <string name="fuckng_wronj_password">Wrong password!</string>
    <string name="are_you_shure">Are you sure?</string>
    <string name="leave">Leave</string>
    <string name="foreground_notification_name">Poker Session</string>
    <string name="session_is_active">Session is active</string>
</resources>
