<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.atomofiron.estimoji.screen.cards.CardsFragment">
    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit"
        />
    <item
        android:id="@+id/menu_cancel"
        android:title="@string/menu_cancel"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_close"
        android:visible="false"
        />
    <item
        android:id="@+id/menu_confirm"
        android:title="@string/menu_confirm"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_confirm"
        android:visible="false"
        />
    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add"
        />
</menu>
