<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:gravity="center">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/auth_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/menu_auth"
        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <EditText
        android:id="@+id/auth_et_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/content_width"
        android:hint="@string/hint_nickname"
        android:gravity="center_horizontal"
        android:inputType="textNoSuggestions"
        android:imeOptions="actionDone"
        android:maxLines="1"
        />
    <Button
        android:id="@+id/auth_btn_create"
        android:layout_width="@dimen/content_width"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:backgroundTint="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/content_margin"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <FrameLayout
        android:id="@+id/auth_fl_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <TextView
            android:id="@+id/auth_tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/auth_btn_join"
            android:layout_width="@dimen/content_width"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:backgroundTint="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:enabled="false"
            android:visibility="invisible"
            />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/auth_ll_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <EditText
            android:id="@+id/auth_et_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/content_width_without_button"
            android:hint="@string/host_ip"
            android:gravity="center_horizontal"
            android:digits="0123456789."
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"
            /><!-- digits breaks maxLines -->
        <ImageButton
            android:id="@+id/auth_ib_qr"
            android:layout_width="@dimen/content_width_button"
            android:layout_height="@dimen/content_width_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_qr_scan"
            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/auth_fab_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_cards"
        />
</LinearLayout>